# GReminder

./: .gitignore  ChangeLog  Makefile.am  NEWS  README.md  TODO  configure.ac
osx/: GReminder  GReminder.bundle  GReminder.plist.in  Makefile  Makefile.in  gen_dmg.sh
po/: POTFILES.in
src/: greminder.mk
src/greminder/: greminder-actions-private.h  greminder-actions.c  greminder-actions.h  greminder-db-private.h  greminder-db.c  greminder-db.h  greminder-item-private.h  greminder-item.c  greminder-item.h  greminder-keyword-widget-private.h  greminder-keyword-widget.c  greminder-keyword-widget.h  greminder-keywords-widget-private.h  greminder-keywords-widget.c  greminder-keywords-widget.h  greminder-list-window-private.h  greminder-list-window.c  greminder-list-window.h  greminder-macros.h  greminder-row-private.h  greminder-row.c  greminder-row.h  greminder-window-private.h  greminder-window.c  greminder-window.h  greminder.c
