# This file is part of GReminder.
#
# Copyright 2014 Marc-Antoine Perennou <Marc-Antoine@Perennou.com>
#
# GReminder is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# GReminder is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with GReminder.  If not, see <http://www.gnu.org/licenses/>.

SUBDIRS = po

ACLOCAL_AMFLAGS  = -I m4 ${ACLOCAL_FLAGS}
AM_MAKEFLAGS = --no-print-directory
AM_DISTCHECK_CONFIGURE_FLAGS = \
	$(NULL)

AM_CPPFLAGS =                                \
	-include config.h                    \
	-Isrc/greminder                      \
	-DG_REMINDER_COMPILATION             \
	-DLOCALEDIR=\"$(localedir)\"         \
	-DPKGLIBEXECDIR=\"$(pkglibexecdir)\" \
	$(NULL)

AM_CFLAGS =            \
	$(GLIB_CFLAGS) \
	$(GTK_CFLAGS)  \
	$(NULL)

AM_LIBS =            \
	$(GLIB_LIBS) \
	$(GTK_LIBS)  \
	-lleveldb    \
	$(NULL)

EXTRA_DIST =                      \
	autogen.sh                \
	README.md                 \
	ChangeLog.pre2.2.1        \
	bindings/vapi/config.vapi \
	$(NULL)

CLEANFILES =
SUFFIXES =

bin_PROGRAMS =

TESTS=
noinst_PROGRAMS= \
	$(TESTS) \
	$(NULL)

@INTLTOOL_XML_NOMERGE_RULE@

# Real stuff goes in these subfiles

include src/greminder.mk

# Maintainance stuff

update-po:
	$(MAKE) -C po $@

release:
	$(MAKE) distcheck &&                                            \
	git commit -asm "Release $(PACKAGE_NAME) $(PACKAGE_VERSION)" && \
	git tag -sm "Release $(PACKAGE_NAME) $(PACKAGE_VERSION)" v$(PACKAGE_VERSION)

# Generate a ChangeLog file from 'git log'

dist-hook:
	@ if test -d "$(srcdir)/.git"; then                           \
	    echo Creating ChangeLog;                                  \
	    cd "$(srcdir)";                                           \
	    (                                                         \
	      echo -e '# Generated by Makefile. Do not edit.\n\n';    \
	      $(srcdir)/build-aux/missing --run git log --stat;       \
	    ) > ChangeLog.tmp;                                        \
	    mv -f ChangeLog.tmp $(distdir)/ChangeLog;                 \
	    if test -f "ChangeLog.tmp"; then                          \
	        rm -f ChangeLog.tmp;                                  \
	        echo Failed to generate ChangeLog >&2;                \
	    fi;                                                       \
	else                                                          \
	    echo A git clone is required to generate a ChangeLog >&2; \
	fi
